--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -724,6 +724,7 @@ h6 {
 mat-icon {
   overflow: visible !important;
   min-height: unset !important;
+  flex-shrink: 0;
 
   &.warn {
     color: var(--warn-color) !important;
