--- a/src/app/features/components/dashboard/serve-overview/serve-overview.component.html
+++ b/src/app/features/components/dashboard/serve-overview/serve-overview.component.html
@@ -13,20 +13,32 @@
     >
     </app-status-overview-panel>
 
-    <!-- Active Serves Panel -->
+    <!-- Active Serves Panel: show individual serve cards because a remote can have multiple serves -->
     @if (activeCount > 0) {
-      <app-remotes-panel
-        [title]="getActiveTitle()"
-        [icon]="activeIcon"
-        [remotes]="activeRemotes"
-        mode="serve"
-        [actionInProgress]="actionInProgress"
-        [primaryActionLabel]="primaryActionLabel"
-        [activeIcon]="activeIcon"
-        (remoteSelected)="selectRemote($event)"
-        (startJob)="triggerStartServe($event.remoteName)"
-      >
-      </app-remotes-panel>
+      <mat-card class="remotes-panel active-remotes-panel">
+        <mat-card-header class="remotes-header">
+          <mat-card-title class="panel-title-content">
+            <mat-icon [svgIcon]="activeIcon" class="active-icon"></mat-icon>
+            <span>{{ getActiveTitle() }}</span>
+            <span class="remote-count">{{ runningServes.length }}</span>
+          </mat-card-title>
+        </mat-card-header>
+
+        <mat-card-content class="remotes-content">
+          <div class="remotes-grid">
+            @for (serve of runningServes; track serve.id) {
+              <app-serve-card
+                [serve]="serve"
+                [showRemoteName]="true"
+                (stopServe)="onStopServe($event)"
+                (copyToClipboard)="handleCopyToClipboard($event)"
+                (cardClick)="handleServeCardClick($event)"
+              >
+              </app-serve-card>
+            }
+          </div>
+        </mat-card-content>
+      </mat-card>
     }
 
     <!-- Available Remotes Panel -->
